hydroflow/tests/compile-fail/surface_forwardref_self2_indirect.stderr
error: Reached the recursion limit while resolving resolving name. Is the pipeline self-referential?
 --> tests/compile-fail/surface_forwardref_self2_indirect.rs:6:13
  |
6 |         f = g;
  |             ^

error: `map` must have exactly 1 input(s), actually has 0.
 --> tests/compile-fail/surface_forwardref_self2_indirect.rs:5:18
  |
5 |         g = f -> map(|x: usize| x) -> f;
  |                  ^^^^^^^^^^^^^^^^^

error: `map` must have exactly 1 output(s), actually has 0.
 --> tests/compile-fail/surface_forwardref_self2_indirect.rs:5:18
  |
5 |         g = f -> map(|x: usize| x) -> f;
  |                  ^^^^^^^^^^^^^^^^^
